--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="utf-8">
     <title>常见问题的解决方案</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <!--<link rel="icon" sizes="48x48" href="/solution/static/favicon.png">-->
+    <link rel="icon" sizes="48x48" href="/static/favicon.png">
+    <!--<link href="https://cdn.bootcss.com/toastr.js/latest/css/toastr.min.css" rel="stylesheet">-->
     <!--<link href="/solution/static/style/waves.css" rel="stylesheet">-->
-
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
     <link href="https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
     <script src="https://cdn.bootcss.com/tween.js/r10/Tween.min.js"></script>
-    <script src="https://cdn.bootcss.com/Swiper/3.4.2/js/swiper.js"></script>
+    <!--<script src="https://cdn.bootcss.com/Swiper/3.4.2/js/swiper.js"></script>-->
     <script src="https://cdn.bootcss.com/modernizr/2010.07.06dev/modernizr.min.js"></script>
+
+    <!--<script src="https://cdn.bootcss.com/toastr.js/latest/js/toastr.min.js"></script>-->
+
   </head>
   <body>
     <div id="app"></div>
