增加 高德地图

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
     <!--<script src="https://cdn.bootcss.com/toastr.js/latest/js/toastr.min.js"></script>-->
 
+
+    <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.0&key=ac87ab3e588576cb853f27a7605e0f12"></script>
+
+
   </head>
   <body>
     <div id="app"></div>
