--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!--<script src="https://cdn.bootcss.com/toastr.js/latest/js/toastr.min.js"></script>-->
 
-
+    <script src="https://cdn.bootcss.com/hammer.js/2.0.8/hammer.js"></script>
     <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.0&key=ac87ab3e588576cb853f27a7605e0f12"></script>
 
 
