--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!--<link href="https://cdn.bootcss.com/toastr.js/latest/css/toastr.min.css" rel="stylesheet">-->
   <!--<link href="/solution/static/style/waves.css" rel="stylesheet">-->
   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+  <!-- <script src="https://cdn.bootcss.com/lodash.js/4.17.4/lodash.min.js"></script> -->
   <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
   <link href="https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css" rel="stylesheet">
   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
