--- a/index.html
+++ b/index.html
@@ -2,32 +2,34 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>常见问题的解决方案</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="icon" sizes="48x48" href="/static/favicon.png">
-  <!--<link href="https://cdn.bootcss.com/toastr.js/latest/css/toastr.min.css" rel="stylesheet">-->
-  <!--<link href="/solution/static/style/waves.css" rel="stylesheet">-->
-  <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-  <!-- <script src="https://cdn.bootcss.com/lodash.js/4.17.4/lodash.min.js"></script> -->
-  <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-  <link href="https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css" rel="stylesheet">
-  <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-  <script src="https://cdn.bootcss.com/tween.js/r10/Tween.min.js"></script>
-  <!--<script src="https://cdn.bootcss.com/Swiper/3.4.2/js/swiper.js"></script>-->
-  <script src="https://cdn.bootcss.com/modernizr/2010.07.06dev/modernizr.min.js"></script>
+    <meta charset="utf-8">
+    <title>常见问题的解决方案</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="icon" sizes="48x48" href="/static/favicon.png">
+    <!--<link href="https://cdn.bootcss.com/toastr.js/latest/css/toastr.min.css" rel="stylesheet">-->
+    <!--<link href="/solution/static/style/waves.css" rel="stylesheet">-->
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+    <!-- <script src="https://cdn.bootcss.com/lodash.js/4.17.4/lodash.min.js"></script> -->
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/tween.js/r10/Tween.min.js"></script>
+    <!--<script src="https://cdn.bootcss.com/Swiper/3.4.2/js/swiper.js"></script>-->
+    <script src="https://cdn.bootcss.com/modernizr/2010.07.06dev/modernizr.min.js"></script>
 
-  <!--<script src="https://cdn.bootcss.com/toastr.js/latest/js/toastr.min.js"></script>-->
+    <!--<script src="https://cdn.bootcss.com/toastr.js/latest/js/toastr.min.js"></script>-->
 
-  <script src="https://cdn.bootcss.com/hammer.js/2.0.8/hammer.js"></script>
-  <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.0&key=ac87ab3e588576cb853f27a7605e0f12"></script>
-
+    <script src="https://cdn.bootcss.com/hammer.js/2.0.8/hammer.js"></script>
+    <!-- 高德map -->
+    <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.0&key=ac87ab3e588576cb853f27a7605e0f12"></script>
+    <!-- <script type="text/javascript" src="http://cache.amap.com/lbs/static/addToolbar.js"></script> -->
+    <!-- 高德map -->
 
 </head>
 
 <body>
-  <div id="app"></div>
-  <!-- built files will be auto injected -->
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
 </body>
 
 </html>
