--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>常见问题的解决方案</title><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><link rel=icon sizes=48x48 href=/static/favicon.png><script src=https://cdn.bootcss.com/jquery/3.2.1/jquery.js></script><link href=https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css rel=stylesheet><link href=https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css rel=stylesheet><script src=https://cdn.bootcss.com/jquery/3.2.1/jquery.js></script><script src=https://cdn.bootcss.com/tween.js/r10/Tween.min.js></script><script src=https://cdn.bootcss.com/modernizr/2010.07.06dev/modernizr.min.js></script><script src=https://cdn.bootcss.com/hammer.js/2.0.8/hammer.js></script><script type=text/javascript src="http://webapi.amap.com/maps?v=1.4.0&key=ac87ab3e588576cb853f27a7605e0f12"></script><link href=/static/css/app.8322aae0ec8a67316fcc5906aee120f0.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.ba5f9b356ed37b8fc40d.js></script><script type=text/javascript src=/static/js/vendor.34b307f08f06ebcde5c5.js></script><script type=text/javascript src=/static/js/app.183a0bc3726824ece534.js></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset=utf-8>
+    <title>常见问题的解决方案</title>
+    <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <link rel=icon sizes=48x48 href=/static/favicon.png>
+    <script src=https://cdn.bootcss.com/jquery/3.2.1/jquery.js></script>
+    <link href=https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css rel=stylesheet>
+    <link href=https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css rel=stylesheet>
+    <script src=https://cdn.bootcss.com/jquery/3.2.1/jquery.js></script>
+    <script src=https://cdn.bootcss.com/tween.js/r10/Tween.min.js></script>
+    <script src=https://cdn.bootcss.com/modernizr/2010.07.06dev/modernizr.min.js></script>
+    <script src=https://cdn.bootcss.com/hammer.js/2.0.8/hammer.js></script>
+    <!-- <script type=text/javascript src="http://webapi.amap.com/maps?v=1.4.0&key=ac87ab3e588576cb853f27a7605e0f12"></script> -->
+    <link href=/static/css/app.8322aae0ec8a67316fcc5906aee120f0.css rel=stylesheet>
+</head>
+
+<body>
+    <div id=app></div>
+    <script type=text/javascript src=/static/js/manifest.ba5f9b356ed37b8fc40d.js></script>
+    <script type=text/javascript src=/static/js/vendor.34b307f08f06ebcde5c5.js></script>
+    <script type=text/javascript src=/static/js/app.183a0bc3726824ece534.js></script>
+</body>
+
+</html>
