--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset=utf-8>
     <title>常见问题的解决方案</title>
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <link rel=icon sizes=48x48 href=/static/favicon.png>
+    <!-- <link rel=icon sizes=48x48 href=/static/favicon.png> -->
     <script src=https://cdn.bootcss.com/jquery/3.2.1/jquery.js></script>
     <link href=https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.css rel=stylesheet>
     <link href=https://cdn.bootcss.com/Swiper/3.4.2/css/swiper.min.css rel=stylesheet>
